Minor tweaks for latest Javas